Fix z-index issues with the main nav overlapping the controls.

--- a/app/assets/stylesheets/_scene.sass
+++ b/app/assets/stylesheets/_scene.sass
@@ -88,7 +88,7 @@
           color: #909696
           font-weight: bold
           line-height: 1
-          padding: 20px
+          padding: 50px 20px
           text-align: center
           text-transform: uppercase
 
